# tpp-mlir-ext

./: CMakeLists.txt
lib/TPP/: DefaultPipeline.cpp  DefaultTppPasses.cpp
tools/tpp-opt/: CMakeLists.txt  tpp-opt.cpp
tools/tpp-run/: CMakeLists.txt  tpp-run.cpp
